--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-asgiref==3.3.4
-Django==3.2
-Pillow==8.2.0
-pytz==2021.1
-sqlparse==0.4.1
+asgiref
+Django
+Pillow
+pytz
+requests
+social_auth_app_django
+psycopg2-binary
+
