--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+aniso8601==7.0.0
 asgiref==3.3.4
+attrs==21.2.0
+author==0.0.0.0.dev20200926
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -8,19 +11,36 @@ Django==3.2
 django-debug-toolbar==3.2.1
 django-debug-toolbar-template-profiler==2.0.2
 django-extensions==3.1.3
+django-filter==2.4.0
+djangorestframework==3.12.4
+graphene==2.1.8
+graphql-core==2.3.2
+graphql-relay==2.0.1
 idna==2.10
+iniconfig==1.1.1
+Markdown==3.3.4
 oauthlib==3.1.0
+packaging==20.9
 Pillow==8.2.0
+pluggy==0.13.1
+promise==2.3
 psycopg2-binary==2.8.6
+py==1.10.0
 pycparser==2.20
 PyJWT==2.0.1
+pyparsing==2.4.7
+pytest==6.2.4
+python-memcached==1.59
 python3-openid==3.2.0
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 requests-oauthlib==1.3.0
+Rx==1.6.1
 six==1.15.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sqlparse==0.4.1
+toml==0.10.2
 urllib3==1.26.4
 wrapt==1.12.1
